# technical-drawing-engine

./: .gitignore  README.md  check_dxf.py  pyproject.toml  technical-plotter-architecture.md  test.gbr  test_extract.py  test_gerber.py  test_gerber_full.py  test_gerber_render.py  test_gerbonara.py  test_gerbonara2.py  test_gerbonara3.py  test_raster_pipeline.py  test_text2path.py  test_upload.py  test_upload_eda.py
examples/: calibration_identity.json
myowntest/: Circuit diagram_OXB_T.dxf.gcode
plotcad_jobs/20260602-070244-3ed2cc73/: Circuit diagram_OXB_T.dxf  document.json  output.gcode  status.json
tests/: test_extended_formats.py  test_optimizer_enhanced.py  test_pen_library.py  test_pipeline.py  test_server.py
vectordraft/: __init__.py  __main__.py  calibration.py  cli.py  gcode.py  importers.py  job_manager.py  model.py  optimizer.py  preview.py  serial_stream.py  server.py  svg_preview.py
vectordraft/static/: app.js  index.css  index.html
