[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "vectordraft"
version = "0.1.0"
description = "CAD-aware vector plotting pipeline for technical drawing plotters."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "VectorDraft" }]
dependencies = [
  "ezdxf>=1.3",
  "fastapi>=0.115",
  "matplotlib>=3.8",
  "numpy>=1.26",
  "pillow>=10.0",
  "pydantic>=2.7",
  "pyserial>=3.5",
  "PyMuPDF>=1.24",
  "python-multipart>=0.0.9",
  "rich>=13.7",
  "shapely>=2.0",
  "svgpathtools>=1.6",
  "typer>=0.12",
  "uvicorn[standard]>=0.30",
  "vtracer>=0.6",
  "websockets>=13.0",
]

[project.optional-dependencies]
dev = [
  "httpx2>=0.1",
  "pytest>=8.0",
]

[project.scripts]
vectordraft = "vectordraft.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
